--- a/.gitignore
+++ b/.gitignore
@@ -92,7 +92,7 @@ ipython_config.py
 #   However, in case of collaboration, if having platform-specific dependencies or dependencies
 #   having no cross-platform support, pipenv may install dependencies that don't work, or not
 #   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # poetry
 #   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
@@ -164,6 +164,5 @@ cython_debug/
 # MacOS stuff
 .DS_Store
 
-# GCP credentials
-credentials.json
+# GCP Token
 token.json
