--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-OPENAI_API_KEY=sk
-OPENAI_MODEL=gpt
-REDIS_URL=redis://
+OPENAI_API_KEY=sk-
+OPENAI_MODEL=gpt-
+EMBEDDINGS_MODEL=text-embedding-3-small
+MILVUS_URL=http://localhost:19530
+REDIS_URL=redis://localhost:6379/
+LIBRE_OFFICE_URL=http://localhost:2004/request
+GOOGLE_CLIENT_ID=6972
+GOOGLE_CLIENT_SECRET=GOCSPX
