🔧 Update .env.example to include FRONTEND_URL and ensure proper formatting

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ REDIS_URL=redis://localhost:6379/
 LIBRE_OFFICE_URL=http://localhost:2004/request
 GOOGLE_CLIENT_ID=6972
 GOOGLE_CLIENT_SECRET=GOCSPX
+FRONTEND_URL=http://localhost:3000
