:closed_lock_with_key: Update .env

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-OPENAI_API_KEY=sk-
+# OpenAI
+OPENAI_API_KEY=sk-xxx
 OPENAI_MODEL=gpt-
-EMBEDDINGS_MODEL=text-embedding-3-small
+EMBEDDINGS_MODEL=text-
+
+# Docker containers
 MILVUS_URL=http://localhost:19530
-REDIS_URL=redis://localhost:6379/
-LIBRE_OFFICE_URL=http://localhost:2004/request
-GOOGLE_CLIENT_ID=6972
-GOOGLE_CLIENT_SECRET=GOCSPX
+REDIS_URL=http://localhost:6379
+
+# Google creds
+GOOGLE_CLIENT_ID=6972xxxx
+GOOGLE_CLIENT_SECRET=GOxxxx
+
+# App config
 FRONTEND_URL=http://localhost:3000
