--- a/.gitignore
+++ b/.gitignore
@@ -101,9 +101,6 @@ Pipfile.lock
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
 #poetry.lock
 
-# uv
-uv.lock
-
 # pdm
 #   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
 #pdm.lock
@@ -169,3 +166,6 @@ cython_debug/
 
 # GCP secrets
 secrets/
+
+# Deployment and Development
+files/
