📌 update requirements for Docker container

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-python-dotenv>=1.0
-flask>=3.0
-flask-cors>=5.0
-authlib>=1.3
-google-api-python-client>=2.122
-google-auth-httplib2>=0.1
-google-auth-oauthlib>=1.2
-pymupdf>=1.0
-pymilvus>=2.5
-redis>=5.0
-langchain-core>=0.3
-langchain-openai>=0.2
-langchain-redis>=0.1
-langchain-milvus>=0.1
-langgraph>=0.2
-git+https://github.com/jorge-jrzz/langchain_gcalendar.git@google_calendar#egg=langchain-community&subdirectory=libs/community
+authlib>=1.5.1
+flask>=3.1.0
+flask-cors>=5.0.1
+google-api-python-client>=2.162.0
+google-auth>=2.38.0
+google-auth-oauthlib>=1.2.1
+grpcio>=1.67.1
+langchain-community>=0.3.18
+langchain-core>=0.3.40
+langchain-google-community>=2.0.7
+langchain-milvus>=0.1.7
+langchain-openai>=0.3.7
+langchain-redis>=0.2.0
+langgraph>=0.3.2
+pymupdf>=1.25.3
+python-dotenv>=1.0.1
+redis>=5.2.1
