🔧 Update .env.example with service URLs

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 # OpenAI
 OPENAI_API_KEY=sk-xxx
-OPENAI_MODEL=gpt-
-EMBEDDINGS_MODEL=text-
+OPENAI_MODEL=gpt-x
+EMBEDDINGS_MODEL=text-xxx
 
 # Docker containers
-MILVUS_URL=http://localhost:19530
-REDIS_URL=http://localhost:6379
+REDIS_URL=redis://redis:6379
+MILVUS_URL=http://milvus:19530
 
 # Google creds
-GOOGLE_CLIENT_ID=6972xxxx
-GOOGLE_CLIENT_SECRET=GOxxxx
+GOOGLE_CLIENT_ID=697xxx
+GOOGLE_CLIENT_SECRET=GOCSPX-xxxx
 
 # App config
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://zolkin.vercel.app
+BASE_DIR=/app # Si se despliega en un contenedor
