🔨 Add references to /app directory

--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,4 @@ GOOGLE_CLIENT_SECRET=GOCSPX-xxxx
 
 # App config
 FRONTEND_URL=https://zolkin.vercel.app
-BASE_DIR=/app # Si se despliega en un contenedor
+BASE_DIR=/app
