--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,27 @@
 [project]
-name = "zolkin-backend"
-version = "0.1.0"
-description = "Zolkin Backend. A Flask API for Zolkin project."
+name = "zolkin"
+version = "0.2.0"
+description = "Zolkin Backend. A FastAPI API for Zolkin project."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "authlib>=1.5.1",
-    "flask>=3.1.0",
-    "flask-cors>=5.0.1",
-    "google-api-python-client>=2.162.0",
+    "authlib>=1.5.2",
+    "fastapi>=0.115.12",
     "google-auth>=2.38.0",
-    "google-auth-oauthlib>=1.2.1",
-    "grpcio>=1.67.1",
-    "langchain-community>=0.3.18",
-    "langchain-core>=0.3.40",
+    "itsdangerous>=2.2.0",
+    "langchain-core>=0.3.50",
     "langchain-google-community>=2.0.7",
     "langchain-milvus>=0.1.7",
-    "langchain-openai>=0.3.7",
+    "langchain-openai>=0.3.12",
     "langchain-redis>=0.2.0",
-    "langgraph>=0.3.2",
-    "pymupdf>=1.25.3",
-    "python-dotenv>=1.0.1",
+    "langgraph>=0.3.24",
+    "ocrmypdf>=16.10.0",
+    "pymilvus>=2.4.9",
+    "pymupdf>=1.25.5",
+    "python-dotenv>=1.1.0",
+    "python-multipart>=0.0.20",
     "redis>=5.2.1",
+    "uvicorn>=0.34.0",
 ]
 
 [dependency-groups]
