--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Backend Service
   backend:
@@ -26,8 +24,8 @@ services:
 
   # Redis Service
   redis:
+    container_name: redis
     image: redis/redis-stack-server:latest
-    container_name: zolkin-redis
     ports:
       - "6379:6379"
     volumes:
@@ -37,7 +35,7 @@ services:
 
   # Milvus - ETCD Service
   etcd:
-    container_name: zolkin-etcd
+    container_name: milvus-etcd
     image: quay.io/coreos/etcd:v3.5.0
     environment:
       - ETCD_AUTO_COMPACTION_MODE=revision
@@ -51,7 +49,7 @@ services:
 
   # Milvus - MinIO Service
   minio:
-    container_name: zolkin-minio
+    container_name: milvus-minio
     image: minio/minio:RELEASE.2020-12-03T00-03-10Z
     environment:
       MINIO_ACCESS_KEY: minioadmin
@@ -69,7 +67,7 @@ services:
 
   # Milvus - Standalone Service
   milvus:
-    container_name: zolkin-milvus
+    container_name: milvus
     image: milvusdb/milvus:v2.5.0-beta
     command: ["milvus", "run", "standalone"]
     environment:
